--- a/index.html
+++ b/index.html
@@ -4,8 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 1</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style/assignment.css">
 </head>
-<body>
+<body class="open-sans-normal">
+    <header>
+        <nav>
+            <h2 class="nav-title"><span class="text-primary">LOGO</span></h2>
+            <ul>
+                <li><a href=""><button class="btn-primary">Sing Up</button></a></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h3 class="banner-greetings">Cool Dark UI Template for <br>
+                 Webflow Agencies!</h3>
+                 <button class="btn-primary">Stay Focused</button>
+
+            </div>
+
+        </div>
+
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
     
 </body>
 </html>
