--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/assignment.css">
+
+
 </head>
 <body class="open-sans-normal">
-    <header>
+    <header class="header">
         <nav>
             <h2 class="nav-title"><span class="text-primary">LOGO</span></h2>
             <ul>
@@ -28,9 +30,28 @@
         </div>
 
     </header>
+
     <main>
+        <section class="action">
+            <div class="banner">
+                <div class="banner-action">
+                <h3>See It in Action</h3>
+                <p>Explore the live preview and imagine your brand in this bold new look.</p>
+                <button class="btn-primary">Launch Live Preview</button>
+
+            </div>
+            <img src="Assets/wc-mini.png" alt="">
+
+            </div>
+            
+        </section>
+        <section class="productive user">
+            
+
+        </section>
 
     </main>
+
     <footer>
 
     </footer>
